[fix] #122 코드 실행 API 수정
코드실행 시 Testcase가 추가 안되던 현상을 해결하였습니다.